--- a/sass/components/_offer.scss
+++ b/sass/components/_offer.scss
@@ -1,4 +1,51 @@
+.sectionoffer {
+    display: none;
+}
+
+@media screen and (min-width: 1200px) {
+    .sectionoffer {
+        display: block;
+    }
+}
+
 .offer {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
+
+.offer__item {
+    position: relative;
+}
+
+.offer__text {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 27px 90px;
+    background-color: rgba(47, 48, 58, 0.8);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.142;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--white);
+}
+
+.offer__header {
+    font-style: bold;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.167;
+    letter-spacing: 3%;
+    color: var(--main-black);
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+/*.offer {
     list-style: none;
     margin-bottom: 94px;
 }
@@ -44,4 +91,4 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--white);
-}
+} */
