--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -4,6 +4,16 @@
 .team {
     list-style: none;
 }
+.team__header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.166;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--black);
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
 
 .team__item {
     background-color: var(--white);
