--- a/css/main.css
+++ b/css/main.css
@@ -864,6 +864,17 @@ img {
   list-style: none;
 }
 
+.team__header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.166;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--black);
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
 .team__item {
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1051,28 +1062,12 @@ img {
      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }*/
 .clients {
-  list-style: none;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin: -15px;
   align-items: center;
-}
-
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.clients__link {
-  display: flex;
-  border: 1px solid var(--link-color);
-  border-radius: 4px;
-  fill: var(--link-color);
-  padding: 15px 32px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__link:hover, .clients__link:focus {
-  fill: var(--main-color);
-  border-color: var(--main-color);
+  justify-content: space-between;
+  list-style: none;
 }
 
 .clients__header {
@@ -1086,11 +1081,80 @@ img {
   margin-top: 30px;
 }
 
-.sectionclients {
-  margin-bottom: 94px;
-  margin-top: 94px;
+.clients__item {
+  margin: 15px;
+  flex-basis: calc((100% - 60px) / 2);
 }
 
+.clients__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+  border: 1px solid var(--link-color);
+  border-radius: 4px;
+  fill: var(--link-color);
+  transition-property: fill, border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:hover, .clients__link:focus {
+  fill: var(--main-color);
+  border: 1px solid var(--main-color);
+}
+
+@media screen and (min-width: 768px) {
+  .clients__item {
+    flex-basis: calc((100% - 90px) / 3);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    flex-basis: calc((100% - 180px) / 6);
+  }
+}
+
+/*.clients {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ 
+ .clients__item:not(:last-child) {
+     margin-right: 30px;
+    }
+
+.clients__link {
+    display: flex;
+    border: 1px solid var(--link-color);
+    border-radius: 4px;
+    fill: var(--link-color);
+    padding: 15px 32px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus{
+    fill: var(--main-color);
+    border-color: var(--main-color);
+    }
+}
+
+.clients__header {
+     font-weight: 700;
+     font-size: 36px;
+     line-height: 1.166;
+     text-align: center;
+     letter-spacing: 0.03em;
+     color: var(--black);
+    margin-bottom: 30px;
+    margin-top: 30px;
+ }
+.sectionclients {
+    margin-bottom: 94px;
+    margin-top: 94px;
+}*/
 .backdrop {
   position: fixed;
   top: 0;
@@ -1309,6 +1373,27 @@ img {
   }
 }
 
+.sectionporfoliobtn {
+  padding-bottom: 0;
+  margin-bottom: 40px;
+}
+
+.portfoliobtn {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.portfoliobtn__item {
+  margin-bottom: 15px;
+}
+
+.portfoliobtn__item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .portfoliobtn {
   list-style: none;
 }
@@ -1340,101 +1425,157 @@ img {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+@media screen and (min-width: 768px) {
+  .sectionporfoliobtn {
+    margin-bottom: 30px;
+  }
+  .portfoliobtn {
+    justify-content: center;
+  }
+  .portfoliobtn__item {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .sectionporfoliobtn {
+    margin-bottom: 34px;
+  }
+}
+
+/*.portfoliobtn {
+    list-style: none;
+}
+
+.portfoliobtn__text {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.625;
+    letter-spacing: 3%;
+    color: var(--black);
+    background-color: var(--btn-backround);
+    border-style: none;
+    border-radius: 4px;
+    text-align: center;
+    padding: 6px 22px;
+    cursor: pointer;
+    transition-property: color, box-shadow, background-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+            background-color: var(--main-color);
+            color: var(--white);
+            cursor: pointer;
+            border-style: none;
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+                1px 4px 4px rgba(0, 0, 0, 0.06),
+                1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
+}
+
 .sectionporfoliobtn {
-  margin-bottom: 94px;
-  margin-top: 94px;
+    margin-bottom: 94px;
+    margin-top: 94px;
+
 }
 
 .portfoliobtn {
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .portfoliobtn__item :not(last-child) {
-  margin-right: 8px;
+    margin-right: 8px;
 }
-
-.main-list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: 94px;
+*/
+/*.main-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 94px;
 }
 
 .main-list-item {
-  width: calc((100%/3));
-  margin-top: 50px;
-  width: 370px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: calc((100%/3));
+    margin-top: 50px;
+    width: 370px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .main-list-item :nth-last-child() {
-  margin-right: 30px;
+    margin-right: 30px;
 }
 
+
 .main-list-header {
-  font-weight: 700;
-  font-style: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 6%;
-  color: var(--main-black);
-  margin-left: 24px;
-  margin-bottom: 4px;
-  margin-top: 20px;
+    font-weight: 700;
+    font-style: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 6%;
+    color: var(--main-black);
+    margin-left: 24px;
+    margin-bottom: 4px;
+    margin-top: 20px;
 }
 
 .main-list-text {
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 3%;
-  color: var(--main-grey);
-  margin-left: 24px;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 3%;
+    color: var(--main-grey);
+    margin-left: 24px;
 }
 
 .border-text {
-  border-bottom: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  border-top: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    border-top: 1px solid var(--border-color);
 }
 
 .porfolio-wrapper:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  cursor: pointer;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        1px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
 }
 
 .box-overlay {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .main-list-item:hover .text-overlay {
-  transform: translateY(0);
+    transform: translateY(0);
 }
 
 .text-overlay {
-  position: absolute;
-  width: 370;
-  height: 294;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  bottom: 0;
-  transform: translateY(100%);
-  justify-content: center;
-  padding: 49px 40px;
-  font-size: 18px;
-  line-height: 1.555;
-  color: #ffffff;
-  background: var(--overlay-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+    position: absolute;
+    width: 370;
+    height: 294;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    bottom: 0;
+    transform: translateY(100%);
+    justify-content: center;
+    padding: 49px 40px;
+    font-size: 18px;
+    line-height: 1.555;
+    color: #ffffff;
+    background: var(--overlay-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}*/
 .page-footer {
   background-color: var(--color-backgroudn);
 }
