--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,4 +1,9 @@
-.main-list {
+
+
+
+
+
+/*.main-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -80,4 +85,4 @@
     color: #ffffff;
     background: var(--overlay-color);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
