--- a/sass/components/_portfoliobuttons.scss
+++ b/sass/components/_portfoliobuttons.scss
@@ -1,4 +1,82 @@
+.sectionporfoliobtn {
+    padding-bottom: 0;
+    margin-bottom: 40px;
+}
+
 .portfoliobtn {
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+.portfoliobtn__item {
+    margin-bottom: 15px;
+
+    &:not(:last-child) {
+        margin-right: 8px;
+    }
+}
+
+.portfoliobtn {
+    list-style: none;
+}
+
+.portfoliobtn__text {
+    font-family: var(--main-font);
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.625;
+    letter-spacing: 3%;
+    color: var(--black);
+    background-color: var(--btn-backround);
+    border-style: none;
+    border-radius: 4px;
+    text-align: center;
+    padding: 6px 22px;
+    cursor: pointer;
+    transition-property: color, box-shadow, background-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+        background-color: var(--main-color);
+        color: var(--white);
+        cursor: pointer;
+        border-style: none;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+            1px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sectionporfoliobtn {
+        margin-bottom: 30px;
+    }
+
+    .portfoliobtn {
+        justify-content: center;
+    }
+
+
+    .portfoliobtn__item {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .sectionporfoliobtn {
+        margin-bottom: 34px;
+    }
+}
+
+
+/*.portfoliobtn {
     list-style: none;
 }
 
@@ -47,5 +125,6 @@
 .portfoliobtn__item :not(last-child) {
     margin-right: 8px;
 }
+*/
 
 
