--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -58,13 +58,13 @@
 }
 
 
-@media screen and (min-width: 1200px) {
+/*@media screen and (min-width: 1200px) {
     .section {
         padding-bottom: 94px;
         padding-top: 94px;
     }
 
-}
+} */
     
 
 
