--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,149 +1,387 @@
-.page-footer {
+@media screen and (min-width:320px) and (max-width:767px) {
+.footer {
+    list-style: none;
+        padding-top: 60px;
+        padding-bottom: 60px;
+}
+
+.righfooter {
+   
+    margin-bottom: 60px;
+}
+
+
+.sectionfooter {
     background-color: var(--color-backgroudn);
+    padding-top: 60px;
+    text-align: center;
+    justify-content: center;
+}
 
-    &__third-heading {
-        color: var(--white);
-        margin-bottom: 20px;
-        text-align: center;
+
+
+.address-mail .address-phone:not(last-child) {
+    margin-bottom: 9px;
+}
+
+
+
+.address {
+    color: var(--white);
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 1.714;
+    letter-spacing: 3%;
+    text-decoration: none;
+}
+
+.address-mail,
+.address-phone {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-grey);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--main-color);
     }
+}
 
-    &__contact-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+
+.link {
+    color: var(--white);
+    font-weight: 700;
+    font-family: var(--secondary-font);
+    font-style: bold;
+    font-size: 26px;
+    text-decoration: none;
+}
+
+.logodark {
+    font-family: var(--secondary-font);
+    font-weight: 700;
+    font-size: 26px;
+    font-style: bold;
+    line-height: 1.193;
+    letter-spacing: 3%;
+    color: var(--main-color);
+    text-decoration: none;
+}
+
+.socialmedia {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.socialmedia__item:not(:last-child) {
+    margin-right: 10px;
+}
+
+
+.socialmedia__link {
+    display: flex;
+    padding: 12px;
+    border-radius: 50%;
+    fill: var(--white);
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: var(--white);
+        background-color: var(--main-color);
     }
+}
 
-    &__logo {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: var(--white);
-        margin-bottom: 20px;
+
+
+.righfooter__header {
+    color: var(--white);
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 20px;
+    font-style: normal;
+    letter-spacing: 3%;
+    margin-bottom: 20px;
+    text-align: center;
+    justify-content: center;
+}
+
+.righfooter__wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    justify-content: center;
+
+}
+
+/*newsletter*/
+
+
+.newsletter__header {
+
+    margin-bottom: 20px;
+    color: var(--white);
+    font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    font-style: normal;
+    letter-spacing: 3%;
+
+  
+}
+
+.newsletter__input:focus {
+    outline: none;
+    border-color: var(--main-color);
+}
+
+.newsletter__input {
+    display: flex;
+    align-items: center;
+    width: 450px;
+    height: 50px;
+    padding: 15px 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: transparent;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    margin-bottom: 20px;
+    
+  
+
+    &:focus {
+        outline: none;
+        border-color: var(--main-color);
     }
+}
 
-    &__address-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+.newsletter__btn {
+
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    margin-left: 12px;
+    outline: none;
+    fill: var(--white);
+    background: var(--main-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    
+    margin-bottom: 60px;
+
+}
+
+
+
+
+}
+
+@media screen and (min-width:768px) and (max-width:1199px) {
+    .footer {
+    display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        position: relative;}
+
+    .righfooter {
+        margin-left: 144px;
         margin-bottom: 60px;
     }
 
-    &__address {
+
+    .sectionfooter {
+        background-color: var(--color-backgroudn);
+        padding-top: 60px;
         text-align: center;
-    }
-
-    &__form-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 60px;
-    }
-
-    &__form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
     }
 
-    &__button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
-        padding-left: 42px;
-        padding-right: 27px;
-        margin-top: 20px;
+    
+
+    .address-mail .address-phone:not(last-child) {
+        margin-bottom: 9px;
     }
 
-    &__icon {
-        margin-left: 24px;
-        width: 24px;
-        height: 24px;
+    
+
+    .address {
+        color: var(--white);
+        font-family: var(--main-font);
+        font-weight: 400;
+        font-size: 14px;
+        font-style: normal;
+        line-height: 1.714;
+        letter-spacing: 3%;
+        text-decoration: none;
+    }
+
+    .address-mail,
+    .address-phone {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.1429;
+        letter-spacing: 2%;
+        color: var(--main-grey);
+        text-decoration: none;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            color: var(--main-color);
+        }
+    }
+
+
+    .link {
+        color: var(--white);
+        font-weight: 700;
+        font-family: var(--secondary-font);
+        font-style: bold;
+        font-size: 26px;
+        text-decoration: none;
+    }
+
+    .logodark {
+        font-family: var(--secondary-font);
+        font-weight: 700;
+        font-size: 26px;
+        font-style: bold;
+        line-height: 1.193;
+        letter-spacing: 3%;
+        color: var(--main-color);
+        text-decoration: none;
+    }
+
+    .socialmedia {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .socialmedia__item:not(:last-child) {
+        margin-right: 10px;
+    }
+
+
+    .socialmedia__link {
+        display: flex;
+        padding: 12px;
+        border-radius: 50%;
         fill: var(--white);
+        background-color: rgba(255, 255, 255, 0.1);
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            fill: var(--white);
+            background-color: var(--main-color);
+        }
     }
+
+
+
+    .righfooter__header {
+        color: var(--white);
+        font-family: var(--main-font);
+        font-weight: 700;
+        font-size: 20px;
+        font-style: normal;
+        letter-spacing: 3%;
+        margin-bottom: 20px;
+        text-align: center;
+        justify-content: center;
+    }
+
+        .righfooter__wrapper{
+            margin-left: auto;
+                margin-right: auto;
+                text-align: center;
+                justify-content: center;
+
+        }
+
+    /*newsletter*/
+    
+
+    .newsletter__header {
+        
+        margin-bottom: 20px;
+        color: var(--white);
+        font-family: var(--main-font);
+        font-weight: 700;
+        font-size: 14px;
+        font-style: normal;
+        letter-spacing: 3%;
+        
+        margin-left: 150px;   
+    }
+
+    .newsletter__input:focus {
+        outline: none;
+        border-color: var(--main-color);
+    }
+
+    .newsletter__input {
+        display: flex;
+        align-items: center;
+        width: 358px;
+        padding: 15px 16px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background-color: transparent;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        margin-bottom: 20px;
+        margin-left: 150px;
+
+        &:focus {
+            outline: none;
+            border-color: var(--main-color);
+        }
+    }
+
+    .newsletter__btn {
+        
+        align-items: center;
+        justify-content: center;
+        width: 200px;
+        margin-left: 12px;
+        outline: none;
+        fill: var(--white);
+        background: var(--main-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: none;
+        margin-left: 150px;
+        margin-bottom: 60px;
+        
+    }
+
+    
+
+    
 }
 
 
 
-.page-footer__input {
-    width: 91vw;
-    max-width: 450px;
-    padding: 15px 0;
-    padding-left: 16px;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-
-    &:placeholder-shown {
-        font-size: 16px;
-        line-height: 1.25;
-        letter-spacing: 0.03em;
-        color: rgba(255, 255, 255, 0.6);
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .page-footer {
-        &__contact-wrapper {
-            flex-direction: row;
-            align-items: baseline;
-        }
-
-        &__address-container {
-            margin-right: 144px;
-            margin-bottom: 0;
-        }
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .page-footer {
-        padding: 60px 0;
-
-        &__third-heading {
-            text-align: left;
-        }
-
-        &__address-container {
-            justify-content: flex-start;
-            align-items: flex-start;
-            margin-right: 70px;
-            margin-bottom: 0;
-        }
-
-        &__address {
-            text-align: left;
-        }
-
-        &__form-container {
-            align-items: flex-start;
-            margin-top: 0;
-            margin-left: 78px;
-        }
-
-        &__form {
-            flex-direction: row;
-        }
-
-        &__button {
-            margin-top: 0;
-            margin-left: 12px;
-        }
-    }
-
-    .page-footer__input {
-        max-width: 358px;
-    }
-
-}
 
 
-/*.footer {
+@media screen and (min-width:1200px){
+.footer {
     display: flex;
     align-items: center;
     justify-items: center;
@@ -171,7 +409,8 @@
 }
 
 .address {
-    margin-top: 20px
+    margin-top: 20px;
+    margin-left: -20px;
 }
 
 .address {
@@ -184,7 +423,23 @@
     letter-spacing: 3%;
     text-decoration: none;
 }
- 
+.address-mail,
+.address-phone {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1429;
+    letter-spacing: 2%;
+    color: var(--main-grey);
+    text-decoration: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--main-color);
+    }
+}
+
 
 .link {
     color: var(--white);
@@ -226,11 +481,11 @@
     background-color: rgba(255, 255, 255, 0.1);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-   &:hover,
-   &:focus {
-            fill: var(--white);
-            background-color: var(--main-color);
-}
+    &:hover,
+    &:focus {
+        fill: var(--white);
+        background-color: var(--main-color);
+    }
 }
 
 
@@ -242,10 +497,12 @@
     font-size: 20px;
     font-style: normal;
     letter-spacing: 3%;
-} */
+    margin-bottom: 20px;
+    margin-top: -70px;
+}
 
 /*newsletter*/
-/*.newsletter__form {
+.newsletter__form {
     display: flex;
 }
 
@@ -258,7 +515,7 @@
     font-size: 14px;
     font-style: normal;
     letter-spacing: 3%;
-    margin-top: -33px;
+    margin-top: -105px;
 }
 
 .newsletter__input:focus {
@@ -277,9 +534,9 @@
     border-radius: 4px;
 
     &:focus {
-            outline: none;
-            border-color: var(--main-color);
-        }
+        outline: none;
+        border-color: var(--main-color);
+    }
 }
 
 .newsletter__btn {
@@ -298,4 +555,7 @@
 
 .newsletter {
     margin-left: 78px;
-}*/
+}
+}
+
+    
