--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,139 @@
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header {
+    padding: 0;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid var(--border-color);
+
+    &__list {
+        display: none;
+    }
+
+    &__logo {
+        color: var(--black);
+    }
+}
+
+.header__burger-icon {
+    width: 24px;
+    height: 16px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: var(--main-color);
+        cursor: pointer;
+    }
+}
+
+.button {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--white);
+    background-color: var(--main-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-style: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+    .header {
+        padding-top: 21px;
+        padding-bottom: 21px;
+
+        &__list {
+            display: block;
+        }
+
+        &__item:not(:last-child) {
+            margin-bottom: 10px;
+        }
+
+        &__mail-icon {
+            margin-right: 8px;
+            width: 14px;
+            height: 10px;
+        }
+
+        &__phone-icon {
+            margin-right: 8px;
+            width: 10px;
+            height: 14px;
+        }
+    }
+
+    .header__burger-icon{ display: none;
+    }
+
+    .header__contact {
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.167;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: var(--main-grey);
+        fill: var(--main-grey);
+        transition-property: color, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            color: var(--main-color);
+            fill: var(--main-color);
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .header {
+        padding-top: 24px;
+        padding-bottom: 24px;
+
+        &__list {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &__item:not(:last-child) {
+            margin: 0;
+            margin-right: 30px;
+        }
+
+        &__mail-icon {
+            margin-right: 10px;
+            width: 16px;
+            height: 12px;
+        }
+
+        &__phone-icon {
+            margin-right: 10px;
+            width: 10px;
+            height: 16px;
+        }
+
+    }
+
+    .header__contact {
+        font-size: 14px;
+        line-height: 1.143;
+    }
+}
+
+
 .address {
     font-style: normal;
     font-weight: 400;
@@ -29,136 +165,5 @@
 
     &:not(:last-child) {
         margin-bottom: 9px;
-    }
-}
-
-.page-header {
-    padding: 0;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border-bottom: 1px solid var(--border-color);
-
-    &__list {
-        display: none;
-    }
-
-    &__logo {
-        color: var(--black);
-    }
-}
-
-.page-header__burger-icon {
-    width: 24px;
-    height: 16px;
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        fill: var(--main-color);
-        cursor: pointer;
-    }
-}
-
-.button {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.875;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--white);
-    background-color: var(--main-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-style: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-@media screen and (min-width: 768px) {
-    .page-header {
-        padding-top: 21px;
-        padding-bottom: 21px;
-
-        &__burger-icon {
-            display: none;
-        }
-
-        &__list {
-            display: block;
-        }
-
-        &__item:not(:last-child) {
-            margin-bottom: 10px;
-        }
-
-        &__mail-icon {
-            margin-right: 8px;
-            width: 14px;
-            height: 10px;
-        }
-
-        &__phone-icon {
-            margin-right: 8px;
-            width: 10px;
-            height: 14px;
-        }
-    }
-
-    .page-header__contact {
-        display: flex;
-        align-items: center;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 1.167;
-        letter-spacing: 0.02em;
-        text-decoration: none;
-        color: var(--main-grey);
-        fill: var(--main-grey);
-        transition-property: color, fill;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:focus {
-            color: var(--main-color);
-            fill: var(--main-color);
-        }
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .page-header {
-        padding-top: 24px;
-        padding-bottom: 24px;
-
-        &__list {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        &__item:not(:last-child) {
-            margin: 0;
-            margin-right: 30px;
-        }
-
-        &__mail-icon {
-            margin-right: 10px;
-            width: 16px;
-            height: 12px;
-        }
-
-        &__phone-icon {
-            margin-right: 10px;
-            width: 10px;
-            height: 16px;
-        }
-
-    }
-
-    .page-header__contact {
-        font-size: 14px;
-        line-height: 1.143;
     }
 }
