--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,12 @@
 .logo {
-    font-family: var(--second-font);
+    font-family: var(--main-font);
     font-weight: 700;
     font-size: 24px;
     line-height: 1.167;
     letter-spacing: 0.03em;
     text-decoration: none;
 
-    &__span {
+    &__motive {
         color: var(--main-color);
     }
 }
