--- a/sass/components/_mobilemenu.scss
+++ b/sass/components/_mobilemenu.scss
@@ -1,4 +1,4 @@
-.mobile-menu {
+.mobilemenu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,6 +12,7 @@
     padding: 48px 40px;
     padding-right: 17.291vw;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 
     &__nav-list {
         display: block;
@@ -42,14 +43,16 @@
 
     &__social-list {
         justify-content: space-between;
-        align-items: center;
         flex-wrap: wrap;
+        display: flex;
+        text-decoration: none;
     }
+
 
 
 }
 
-.mobile-menu__close-btn {
+.mobilemenu__close-btn {
     width: 40px;
     height: 40px;
     padding: 7px;
@@ -65,7 +68,7 @@
     }
 }
 
-.mobile-menu__nav-link {
+.mobilemenu__nav-link {
     font-weight: 500;
     text-decoration: none;
     font-size: 40px;
@@ -82,13 +85,13 @@
     }
 }
 
-.mobile-menu__mail {
+.mobilemenu__mail {
     text-decoration: none;
     font-weight: 500;
     font-size: 24px;
     line-height: 1.167;
     letter-spacing: 0.02em;
-    color: var(--main-greyr);
+    color: var(--main-grey);
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -99,7 +102,7 @@
     }
 }
 
-.mobile-menu__social-link {
+.mobilemenu__social-link {
     text-decoration: none;
     font-weight: 500;
     font-size: 18px;
@@ -107,11 +110,9 @@
     letter-spacing: 0.02em;
     color: var(--main-color);
     position: relative;
-
-
 }
 
-.mobile-menu__social-item {
+.mobilemenu__social-item {
     position: relative;
 
     &:not(:first-child)::before {
