--- a/sass/components/_sociallinks.scss
+++ b/sass/components/_sociallinks.scss
@@ -1,4 +1,4 @@
-.socials {
+/*.socials {
 
     &:not(:last-child) {
         margin-right: 10px;
@@ -34,7 +34,7 @@
     &--dark:focus {
         background-color: var(--main-color);
     }
-}
+}*/
 
 
 
