--- a/sass/components/_adventages.scss
+++ b/sass/components/_adventages.scss
@@ -1,4 +1,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
+
+
 .advantages__item:not(:last-child) {
         margin-bottom: 30px;
     }
@@ -7,20 +9,15 @@
     list-style: none;    
 }
     
-    /*.sectionadventages {
-            display: flex;
-            list-style: none;
-            align-items: center;
-            justify-content: center;
-        }
+      
+        
     .adventages{
-        display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             list-style: none;
             padding-top: 60px;
-    }*/
+    }
 
     .adventages__header {
         font-style: bold;
@@ -29,7 +26,10 @@
             line-height: 1.143;
             letter-spacing: 3%;
             color: var(--main-black);
-            margin-bottom: 10px;
+             margin-bottom: 30px;
+            justify-content: center;
+            text-align:  center;
+            
             
         }
 
@@ -39,6 +39,10 @@
                 line-height: 1.714;
                 letter-spacing: 3%;
                 color: var(--main-grey);
+                justify-content: center;
+                    align-items: center;
+                    margin-bottom: 30px;
+                
         }
 
        .adventages__icon {
@@ -66,16 +70,24 @@
 
 @media screen and (min-width: 768px) {
     
-
+.sectionadventages{
+    display: flex;
+        padding-top: 60px;
+}
        .adventages {
             display: flex;
             flex-wrap: wrap;
             list-style: none;
+            align-items: center;
+            justify-content: center;
+            margin-top: 94px;
+            margin-left: -15px;
+            
         }
 
        .adventages__item {
             width: 354px;
-            margin-right: 16px
+            margin-right: 16px;   
         }
 
         .adventages__header {
@@ -94,12 +106,15 @@
                 line-height: 1.714;
                 letter-spacing: 3%;
                 color: var(--main-grey);
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 30px;
         }
 
         .adventages__icon{
         background-color: var(--btn-backround);
             margin-bottom: 30px;
-            width: 270px;
+            width: 354px;
             height: 120px;
             padding: 25px;
         }
