--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 24px;
     line-height: 1.167;
