--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -14,6 +14,43 @@
     margin-bottom: 30px;
     margin-top: 30px;
 }
+.header-three-contact {
+    font-style: medium;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.188;
+    letter-spacing: 3%;
+    text-align: center;
+    color: var(--main-black);
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.social__link {
+    display: flex;
+    padding: 12px;
+    border-radius: 50%;
+    fill: var(--link-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    margin-bottom: 30px;
+
+    &:hover,
+    &:focus {
+        fill: var(--white);
+        background-color: var(--main-color);
+    }
+}
+
+.social__item .social__link {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .team__item {
     background-color: var(--white);
@@ -41,7 +78,7 @@
     justify-content: center;
 }
 
-.social__link {
+/*.social__link {
     display: flex;
     width: 44px;
     height: 44px;
@@ -59,7 +96,7 @@
         fill: var(--main-grey);
         background-color: var(--main-color);
     }
-}
+}*/
 
 @media screen and (max-width: 767px) {
     .team__item:not(:last-child) {
